<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".images.ImagesActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_image_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_image_url"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_text_image_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                tools:text="image.url" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radio_group_image_loaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_image_link">

            <RadioButton
                android:id="@+id/option_glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_glide"
                tools:checked="true" />

            <RadioButton
                android:id="@+id/option_coil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_coil" />

            <RadioButton
                android:id="@+id/option_picasso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_picasso" />

            <RadioButton
                android:id="@+id/option_native"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/option_native" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radio_group_image_loaders" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>